Fix mobile spacing

--- a/css/queries.css
+++ b/css/queries.css
@@ -1,9 +1,15 @@
 @media (max-width: 1050px) {
+
+  header {
+    padding-top: 45px;
+    margin-bottom: 45px;
+  }
+
   .main-grid {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.6fr 0.4fr 0.3fr;
     gap: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
   }
 
   .web3-img {
@@ -13,7 +19,7 @@
   }
 
   .main-heading {
-    margin: 25px 0;
+    margin: 5px 0 15px;
   }
 
   h1 {
@@ -23,7 +29,7 @@
   }
 
   .main-text-box {
-    margin: 25px 0;
+    margin: 5px 0 15px;
   }
 
   .button {
@@ -33,6 +39,16 @@
   .section-new {
     grid-column: 2;
     grid-row: 3 / 6;
+    padding: 20px 20px;
+  }
+
+
+  .new-heading-box {
+    margin-bottom: 15px;
+  }
+
+  h2 {
+    font-size: 36px;
   }
 
   .popular-item {
@@ -47,6 +63,11 @@
 }
 
 @media (max-width: 600px) {
+
+  header {
+    padding-top: 35px;
+    margin-bottom: 35px;
+  }
   .small-hero {
     display: block;
   }
@@ -59,6 +80,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 0.6fr 0.4fr 0.3fr;
     gap: 30px;
+    margin-bottom: 50px;
   }
 
   .web3-img {
@@ -67,16 +89,21 @@
     width: 100%;
   }
 
+  .main-heading {
+    margin: 0px 0 0px;
+  }
+
   .main-text-box {
     grid-column: 1;
     grid-row: 3;
+    margin: -15px 0 15px;
   }
+
   .section-new {
     grid-column: 1;
     grid-row: 4;
   }
 
   .popular-item img {
-    width: 25%;
-  }
+    width: 25%;}
 }
