--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ h2 {
   flex-direction: column;
   flex-grow: 1;
   justify-content: space-between;
+  gap: 20px;
 }
 
 h3 {
